fixed horizontal scrolling

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,8 +15,6 @@
 		font-size: 100%;
 		font: inherit;
 		vertical-align: baseline;
-		max-width: 100%;
-		overflow-x: hidden;
 	}
 
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
@@ -47,6 +45,11 @@
 
 	body {
 		-webkit-text-size-adjust: none;
+	}
+
+	html, body {
+	    max-width: 100%;
+	    overflow-x: hidden;
 	}
 
 /* Box Model */
